<resources>
    <string name="app_name">Depiciat</string>

    <string name="ttl_app">Decipat</string>
    <string name="sttl_app">Find your own guide to your destiny</string>

    <string name="info_noIdea">Information of action is unexpected or out of scope.</string>

    <string name="info_denial_ofCameraPermission">Camera permission denied.</string>
    <string name="info_denial_ofGalleryPermission">Gallery permission denied.</string>
    <string name="info_denial_ofBrowserPermission">File Browser permission denied.</string>

    <string name="app_update_msg">You\'re using an old version of the application. Update to the latest version to enjoy updated features.</string>
    <string name="data_loss_alert">If you logout all unsynced data will be lost.</string>

    <string name="name_bearer">Bearer</string>
    <string name="name_nominee">Nominee</string>
    <string name="name_policy">Policy</string>
    <string name="name_bank">Bank</string>

    <string name="ttl_details_bearer">Bearer Details</string>
    <string name="ttl_details_nominee">Nominee Details</string>
    <string name="ttl_details_policy">Policy Details</string>
    <string name="ttl_details_bank">Bank Details</string>

    <string name="sttl_details_bearer">Here in, enter all the bearer related information into their res. fields</string>
    <string name="sttl_details_nominee">Here in, enter all the nominee related information into their res. fields</string>
    <string name="sttl_details_policy">Here in, enter all the policy related information into their res. fields</string>
    <string name="sttl_details_bank">Here in, enter all the bank related information into their res. fields</string>

    <string name="proceed_to_next">Proceed To Next</string>

    <string name="hint_bearer_name">Ex- Dayal Deviprasad Das</string>
    <string name="hint_bearer_dob">12th August, 1990</string>

    <string name="helper_bearer_name">Enter policy holder name</string>
    <string name="helper_bearer_dob">Provide DoB as on provided supporting documents. Ex - PAN</string>

    <string name="val_father">Father</string>
    <string name="val_husband">Husband</string>
    <string name="val_care_taker">Care Taker</string>

    <string name="lbl_bearer_name">Who\'s the bearer of the policy?</string>
    <string name="lbl_bearer_guardian">Who\'s the guardian of bearer?</string>
    <string name="lbl_bearer_guardian_name">What\'s the name of guardian?</string>
    <string name="lbl_bearer_age">So, age is calculated to be:</string>
    <string name="lbl_bearer_dob">When is bearer\'s birthday?</string>
    <string name="lbl_bearer_gender">What\'s the gender of the bearer?</string>
    <string name="val_male">Male</string>
    <string name="val_female">Female</string>
    <string name="val_third_gender">Others</string>
    <string name="lbl_contact_details">Contact Details</string>
    <string name="lbl_bearer_phone">What\'s the contact number?</string>
    <string name="lbl_bearer_mail">Where should his/her mail go?</string>
    <string name="lbl_bearer_address">Where does he/she reside?</string>
    <string name="lbl_nominee_name">Who\'s the nominee for the policy?</string>
    <string name="lbl_nominee_gender">What\'s the gender of the nominee?</string>
    <string name="lbl_nominee_age">How old is the nominee?</string>
    <string name="lbl_nominee_relation">What\'s the relation of nominee?</string>
    <string name="lbl_bank_ifsc">What\'s the IFSC?</string>
    <string name="lbl_bank_name">What\'s the bank name?</string>
    <string name="lbl_bank_branch">What\'s the branch name?</string>
    <string name="lbl_bank_account">What\'s the account number?</string>
    <string name="lbl_bank_account_confirm">Confirm account number:</string>
    <string name="lbl_bank_micr">What\'s the MICR?</string>
    <string name="lbl_policy_number">What\'s the policy number?</string>
    <string name="lbl_policy_premium_mode">What\'s the choosen premium payment mode?</string>
    <string name="val_monthly">Monthly</string>
    <string name="val_quarterly">Quarterly</string>
    <string name="val_half_yearly">Half-Yearly</string>
    <string name="val_yearly">Yearly</string>
    <string name="lbl_policy_premium_amount">What\'s the policy premium amount?</string>
    <string name="lbl_policy_doc">What\'s the policy DoC(Date of Commencement)?</string>
    <string name="lbl_policy_dom">What\'s the policy DoM(Date of Maturity)?</string>
    <string name="lbl_policy_duration">What\'s the duration of the policy?</string>
    <string name="lbl_policy_sum_assured">What\'s the sum assured?</string>
    <string name="lbl_policy_name">What\'s the name of policy plan?</string>
</resources>
